# Autonomus-driving-stack-v3

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  compare_runs.py  package.xml
config/: ekf_params.yaml  pid_params.yaml  sensor_config.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run_and_plot.sh
docs/: ekf_math.md  system_architecture.md
launch/: autonomy_stack.launch.py
results/: control_log_20260311_102407.csv  control_log_20260316_130316.csv  localization_log_20260311_102407.csv  localization_log_20260316_130316.csv  metrics.txt  sensor_usage_log_20260311_102407.csv  sensor_usage_log_20260316_130316.csv
src/control/pid_control/: package.xml  setup.py
src/control/pid_control/pid_control/: __init__.py  pid_controller.py  pid_controller_node.py
src/evaluation/evaluation_tools/: package.xml  setup.cfg  setup.py
src/evaluation/evaluation_tools/evaluation_tools/: __init__.py  evaluate_controller.py  evaluate_localization.py  evaluation_logger_node.py  generate_metrics_summary.py  plot_trajectory.py
src/localization/ekf_localization/: package.xml  setup.py
src/localization/ekf_localization/ekf_localization/: __init__.py  ekf.py  ekf_localization_node.py
src/perception/vehicle_detection/: package.xml  setup.cfg  setup.py
src/perception/vehicle_detection/vehicle_detection/: __init__.py  lead_vehicle_detector_node.py  vehicle_detector.py
src/testing/test_data/: package.xml  setup.cfg  setup.py
src/testing/test_data/test_data/: test_data_node.py
