<?xml version="1.0"?>
<package format="3">
  <name>autonomous_vehicle_stack_v3</name>
  <version>3.0.0</version>
  <description>Autonomous vehicle stack with synthetic sensors.</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
