<?xml version="1.0"?>
<package format="3">
  <name>pid_control</name>
  <version>1.0.0</version>
  <description>PID longitudinal and lateral controller for CARLA</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
